Fixed text wrapping for resizing windows.

--- a/footer.css
+++ b/footer.css
@@ -10,6 +10,7 @@ footer
     background-color: maroon;
     width: 100%;
     align-items: center;
+    text-align: center;
     justify-content: center;
     font-family: "Open Sans";
     font-size: 16px;
